dark mode bug fix

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -526,6 +526,9 @@ html.lenis {
 		clip-path: circle(100px at var(--x, 50%) var(--y, 50%));
 		transition: clip-path 100ms;
 	}
+	&__main-dark.full {
+		display: flex;
+	}
 }
 
 .full {
